@@ -24,6 +24,7 @@ class ApplePayConfig
     public const KEY_CC_TYPES_CARDKNOX_MAPPER = 'cctypes_cardknox_mapper';
     public const APPLEPAY_PAYMENT_ACTION = 'payment/cardknox_apple_pay/payment_action';
     public const APPLEPAY_ENABLE_ON_CARTPAGE = 'payment/cardknox_apple_pay/cardknox_applepay_enable_cart';
+    public const ENABLE_APPLEPAY_SHOW_SUMMARY = 'payment/cardknox_apple_pay/ap_enable_show_summary';
 
     /**
      * @var ScopeConfigInterface
@@ -142,5 +143,15 @@ class ApplePayConfig
     public function isEnabledApplyPayOnCartPage()
     {
         return (bool) $this->getValue(self::APPLEPAY_ENABLE_ON_CARTPAGE);
+    }
+
+    /**
+     * Check show summary is enable for Apple Pay popup on cart page function
+     *
+     * @return boolean
+     */
+    public function isEnabledApplePayShowSummary()
+    {
+        return (bool) $this->getValue(self::ENABLE_APPLEPAY_SHOW_SUMMARY);
     }
 }
